# workspace

./: .gitmodules  notebook.tex  tema_dos.tex
ampl/: README.xpress  ampl  ampl.lic  baron  conopt  cplex  gurobi  libxprl.so.x8.3  minos  snopt  xpress
ampl/amplide/: artifacts.xml
c++/algoritmia/: CMakeLists.txt  a.out  output.out  program.cc  program_bin.cpp  program_fibo.cpp  program_graph.cpp  program_orinal.cpp  program_perms.cc  program_queen.cpp  program_sudokus.cpp  program_sums.cc  temp.txt
c++/numerica/: CMakeLists.txt  Matrix.cc  Matrix.hh  Utils.hh  main.cpp  main_.cc  matrices.cc  matrices.hh
c++/numerical_integrator/dop853/: CMakeLists.txt  main.cpp
c++/opengl/starter/: CMakeLists.txt  VertexBuffer.cpp  VertexBuffer.h  main.cpp
c++/svg_to_eq/: a.out  main.cpp
c++/temp/: .program.cc.swp  a.out  program.cc
io/: calculos.ipynb  modelo1.mod  modelo1.run  modelo2.mod  practica_4.tex  test.mod
latex/: makemake.py
latex/apuntes/: a.tex  movimientos_E2.tex  plantilla.aux  plantilla.tex  plantilla_calculo.tex
latex/beamers/: bugwars.tex
latex/ejercicios/: Makefile  discreta_2_11_d.tex  discreta_reuc_2016_2.tex  entregable_multi.aux  entregable_multi.tex  entregable_multi_2.aux  entregable_multi_2.tex  entregable_topo.aux  entregable_topo.out  entregable_topo.tex  entregable_topo.tex~  practica_io_3.aux  practica_io_3.out  practica_io_3.tex  practica_io_3.toc  temp.tex
latex/examenes/: calculo1_extra_2013.tex  examen_geo_2017.tex  (+9 more)
sage/: Plantilla.ipynb  Plantilla.slides.html  Untitled.slides.html  Untitled1.ipynb  test.ipynb  test.slides.html
(+287 files in other folders)
